# VCoin-V2

./: .gitignore  .pnp.cjs  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  ValidatedAudit.md  package.json  tsconfig.json
programs/content-registry/: Cargo.toml
programs/content-registry/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs  utils.rs
programs/content-registry/src/contexts/: accept_authority.rs  claim_refund.rs  create_content.rs  delete_content.rs  edit_content.rs  get_content.rs  get_energy.rs  initialize.rs  initialize_energy.rs  initialize_user_energy.rs  mod.rs  update_authority.rs  update_config.rs  update_engagement.rs  update_user_tier.rs
programs/content-registry/src/instructions/: mod.rs
programs/content-registry/src/instructions/admin/: accept_authority.rs  cancel_authority_transfer.rs  initialize.rs  initialize_energy.rs  mod.rs  set_paused.rs  update_authority.rs
programs/content-registry/src/instructions/content/: create.rs  delete.rs  edit.rs  mod.rs  update_engagement.rs
programs/content-registry/src/instructions/energy/: claim_refund.rs  initialize_user.rs  mod.rs  update_tier.rs
programs/content-registry/src/instructions/query/: get_content.rs  get_energy.rs  mod.rs
programs/content-registry/src/state/: config.rs  content_record.rs  content_state.rs  content_type.rs  energy_config.rs  mod.rs  registry_config.rs  user_energy.rs  user_rate_limit.rs
programs/content-registry/tests/: admin.rs  content.rs  initialize.rs
programs/content-registry/tests/common/: mod.rs
programs/five-a-protocol/: Cargo.toml
programs/five-a-protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs
programs/five-a-protocol/src/contexts/: accept_authority.rs  create_snapshot.rs  evaluate_vouch.rs  get_score.rs  initialize.rs  mod.rs  register_oracle.rs  submit_score.rs  update_authority.rs  update_config.rs  update_user_score.rs  vouch_for_user.rs
programs/five-a-protocol/src/instructions/: mod.rs
programs/five-a-protocol/src/instructions/admin/: accept_authority.rs  cancel_authority_transfer.rs  initialize.rs  mod.rs  register_oracle.rs  (+2 more)
programs/five-a-protocol/src/state/: config.rs  mod.rs  oracle.rs  pending_score.rs  score_snapshot.rs  user_score.rs  user_vouch_status.rs  vouch_record.rs  vouch_status.rs  voucher_stats.rs
programs/five-a-protocol/tests/: admin.rs  initialize.rs  oracle.rs  vouch.rs
programs/five-a-protocol/tests/common/: mod.rs
programs/gasless-protocol/: Cargo.toml
programs/gasless-protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs
programs/gasless-protocol/src/contexts/: accept_authority.rs  create_session_key.rs  deduct_vcoin_fee.rs  execute_session_action.rs  get_config_stats.rs  get_session_info.rs  get_user_stats.rs  initialize.rs  mod.rs  revoke_session_key.rs  update_authority.rs  update_config.rs
programs/gasless-protocol/src/instructions/: mod.rs
programs/gasless-protocol/src/state/: daily_budget.rs  fee_method.rs  gasless_config.rs  mod.rs  session_key.rs  user_gasless_stats.rs
programs/gasless-protocol/tests/: admin.rs  fee.rs  initialize.rs  session.rs
programs/gasless-protocol/tests/common/: mod.rs
programs/identity-protocol/: Cargo.toml
programs/identity-protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs  utils.rs
programs/identity-protocol/src/contexts/: accept_authority.rs  admin_update_identity.rs  create_identity.rs  get_identity.rs  initialize.rs  link_sas_attestation.rs  mod.rs  subscribe.rs  update_authority.rs  update_config.rs  update_identity.rs
programs/identity-protocol/src/state/: config.rs  identity.rs  mod.rs  sas_attestation.rs  subscription.rs  subscription_tier.rs  verification_level.rs
programs/identity-protocol/tests/: admin.rs  identity.rs  initialize.rs
programs/identity-protocol/tests/common/: mod.rs
programs/sscre-protocol/: Cargo.toml
programs/sscre-protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs
programs/sscre-protocol/src/state/: circuit_breaker.rs  epoch_distribution.rs  funding_layer_config.rs  mod.rs  rewards_pool_config.rs  user_claim.rs  utils.rs
programs/sscre-protocol/tests/: admin.rs  circuit_breaker.rs  claims.rs  epoch.rs  initialize.rs
programs/sscre-protocol/tests/common/: mod.rs
programs/staking-protocol/: Cargo.toml
programs/staking-protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs  utils.rs
programs/staking-protocol/src/contexts/: accept_authority.rs  admin_action.rs  extend_lock.rs  get_stake_info.rs  initialize_pool.rs  mod.rs  stake.rs  unstake.rs  update_tier.rs
programs/staking-protocol/src/instructions/: mod.rs
programs/staking-protocol/src/state/: mod.rs  pool.rs  tier.rs  user_stake.rs
programs/staking-protocol/tests/: admin.rs  extend.rs  initialize.rs  stake.rs  tier.rs  unstake.rs
programs/staking-protocol/tests/common/: mod.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs  utils.rs
programs/transfer-hook/src/contexts/: accept_authority.rs  execute.rs  get_pair_stats.rs  get_user_activity.rs  initialize.rs  initialize_extra_accounts.rs  mod.rs  update_authority.rs  update_config.rs
programs/transfer-hook/src/instructions/: mod.rs
programs/transfer-hook/src/state/: config.rs  mod.rs  pair_tracking.rs  transfer_record.rs  user_activity.rs
programs/transfer-hook/tests/: admin.rs  execute.rs  initialize.rs
programs/transfer-hook/tests/common/: mod.rs
programs/vilink-protocol/: Cargo.toml
programs/vilink-protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs
programs/vilink-protocol/src/state/: action_batch.rs  mod.rs  registered_dapp.rs  user_action_stats.rs  utils.rs  vilink_action.rs  vilink_config.rs
programs/vilink-protocol/tests/: action.rs  admin.rs  dapp.rs  initialize.rs
programs/vilink-protocol/tests/common/: mod.rs
trident-tests/: Cargo.toml
trident-tests/src/: accounts_snapshots.rs  fuzz_5a.rs  fuzz_governance.rs  fuzz_instructions.rs  fuzz_staking.rs  lib.rs
(+249 files in other folders)
