[workspace]
members = [
    "programs/vcoin-token",
    "programs/vevcoin-token",
    "programs/staking-protocol",
    "programs/transfer-hook",
    "programs/identity-protocol",
    "programs/five-a-protocol",
    "programs/content-registry",
    "programs/governance-protocol",
    "programs/sscre-protocol",
    "programs/vilink-protocol",
    "programs/gasless-protocol"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
