[package]
name = "content-registry"
version = "0.1.0"
description = "ViWoApp Content Registry - On-chain content tracking with energy system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "content_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022"] }





