[package]
name = "identity-protocol"
version = "0.1.0"
description = "ViWoApp Identity Protocol with SAS integration and verification levels"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022"] }





