[package]
name = "sscre-protocol"
version = "0.1.0"
description = "SSCRE Rewards Protocol - Self-Sustaining Circular Reward Economy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sscre_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022"] }
solana-program = "2.0"





