[package]
name = "vilink-protocol"
version = "0.1.0"
description = "ViLink Protocol - Cross-dApp Action Deep Links"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vilink_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022"] }
solana-program = "2.0"





